@@ -298,7 +298,7 @@ sensors and/or events.  @command{Ipmi-oem} currently supports @acronym{OEM}
 command extensions for motherboards made by Dell, Fujitsu, IBM, Intel,
 Inventec, Quanta, Sun Microsystems, Supermicro, and Wistron.
 @command{Ipmi-sensors} and @command{ipmi-sel} support @acronym{OEM} sensors
-and/or events for motherboards made from Dell, Fujitsu, Intel,
+and/or events for motherboards made from Dell, Fujitsu, HP, Intel,
 Inventec, Quanta, Sun Microsystems, Supermicro, and Wistron.  (Some of
 the motherboards may have been rebranded by vendors, see manpages for
 official list of confirmed supported motherboards.)
